# misty-plugins

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
catalog/: generate-catalog.mjs  index.json  page-1.json  page-2.json
catalog/plugins/: git.json  preview-panel.json  preview_manager.json  quick_convert.json  themes.json  vault.json  ytdlp.json
host/: plugin_config.h  plugin_signing.cpp  plugin_signing.h
include/: misty_plugin.h  misty_plugin_api.h  misty_plugin_c_api.h  misty_plugin_sdk.h
plugins/panel_preview/: manifest.json.in  plugin.cpp
plugins/preview_manager/: manifest.json  plugin.cpp  plugin.json
plugins/preview_panel/: manifest.json  plugin.cpp
plugins/preview_panel/panels/: auth_panel.cpp  auth_panel.h  preview_panel.h  template_panel.cpp  template_panel.h
plugins/quick_convert/: manifest.json  plugin.cpp  plugin.json
plugins/themes/: manifest.json  plugin.cpp  plugin.json
plugins/vault/: manifest.json  plugin.cpp  plugin.json
plugins/ytdlp/: manifest.json  plugin.cpp  plugin.json
